[package]
name = "fst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
reqwest = { version = "0.11", features = ["json","blocking"] }
druid = { git = "https://github.com/linebender/druid.git" }
# tokio = { version = "1", features = ["full"] }
